added base input

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        
+        <main>
+            <div>
+                <label for="distance">Quanti chilometri vuoi percorrere?</label>
+                <input type="number" name="km" id="distance">
+            </div>
+
+            <div>
+                <label for="user-age">Quanti anni hai?</label>
+                <input type="number" name="age" id="user-age">
+            </div>
+        </main>
 
         <script src="script/myscript.js"></script>
     </body>
