--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 <label for="user-age">Quanti anni hai?</label>
                 <input type="number" name="age" id="user-age">
             </div>
+
+            <div>
+                <button id="calculate">Calcola il prezzo</button>
+            </div>
         </main>
 
         <script src="script/myscript.js"></script>
